Optimization: Major restructuring of generation for binary operations
* Not using slot functions anymore, instead split up macros into two
  parts, one to decide operation result, one to assign and convert
  it to a return value or in-place update potentially.

* Some mixed types only had one direction generated due to a mistake
  in the factory function, so this adds a couple of generated variants,
  give boosts for mixed operations, e.g. long and float values.

* This should make the code more amendable for usage in in-place
  operations, but so far only Python2 int code for is used, which is
  so far the only one.

* Also avoid fallthrough for integer operations that don't use it,
  just noisy code.

* Added cbool direct optimization for a few operations that didn't
  have it.

--- a/nuitka/tools/specialize/templates/HelperOperationInplace.c.j2
+++ b/nuitka/tools/specialize/templates/HelperOperationInplace.c.j2
@@ -25,28 +25,12 @@ static inline bool _BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{
 {% if left.mayBothHaveType(right, "int") %}
 #if PYTHON_VERSION < 0x300
     if ({{left.getIntCheckExpression("*operand1")}} && {{right.getIntCheckExpression("operand2")}}) {
-        {% import 'HelperSlotsInt.c.j2' as int_slots %}
+        {% from 'HelperSlotsInt.c.j2' import int_slot %}
 
-        PyObject *result;
-        PyObject *op1 = *operand1;
-
-        {{ int_slots.int_slot(operator, nb_slot, object_desc, int_desc, int_desc, "result", "op1", "operand2", "exit_result", "exit_result_ok", "exit_result_exception") }}
-
-        exit_result:
-
-        if (unlikely(result == NULL)) {
-            return false;
-        }
+        {% set props = {"exits": []} %}
+        {{ int_slot(props, operator, nb_slot, None, int_desc, int_desc, "result", "*operand1", "operand2", "exit_result_ok", "exit_result_exception") }}
 
         exit_result_ok:
-
-        // We got an object handed, that we have to release.
-        Py_DECREF(*operand1);
-
-        // That's our return value then. As we use a dedicated variable, it's
-        // OK that way.
-        *operand1 = result;
-
         return true;
 
 {# Not all operations have defined a definite exception exit, so this can be unused #}
@@ -150,9 +134,6 @@ static inline bool _BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{
     }
 {% endif %}
 
-{% if left.getTypeSpecializationCode(None, right, nb_slot, sq_slot1, "operand1", "operand2") %}
-    {{left.getTypeSpecializationCode(None, right, nb_slot, sq_slot1, "operand1", "operand2")}}
-{% else %}
     {# TODO: There are major improvements possible by inlining this as well. #}
     PyObject *result = PyNumber_InPlace{{op_code.title()}}(*operand1, operand2);
 
@@ -168,7 +149,6 @@ static inline bool _BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{
     *operand1 = result;
 
     return true;
-{% endif %}
 }
 
 bool BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{right.getHelperCodeName()}}_INPLACE({{left.getVariableDecl("*operand1")}}, {{right.getVariableDecl("operand2")}}) {
