--- a/nuitka/tools/specialize/templates/HelperOperationBinary.c.j2
+++ b/nuitka/tools/specialize/templates/HelperOperationBinary.c.j2
@@ -15,6 +15,13 @@
 {#     See the License for the specific language governing permissions and      #}
 {#     limitations under the License.                                           #}
 {#                                                                              #}
+{% from 'HelperSlotsInt.c.j2' import int_slot %}
+{% from 'HelperSlotsLong.c.j2' import long_slot %}
+{% from 'HelperSlotsFloat.c.j2' import float_slot %}
+{% from 'HelperSlotsBytes.c.j2' import bytes_slot %}
+{% from 'HelperSlotsTuple.c.j2' import tuple_slot %}
+{% from 'HelperSlotsList.c.j2' import list_slot %}
+{% from 'HelperSlotsSet.c.j2' import set_slot %}
 static {{target.getTypeDecl()}} _BINARY_OPERATION_{{op_code}}_{{target.getHelperCodeName()}}_{{left.getHelperCodeName()}}_{{right.getHelperCodeName()}}({{left.getVariableDecl("operand1")}}, {{right.getVariableDecl("operand2")}}) {
     {{left.getCheckValueCode("operand1")}}
     {{right.getCheckValueCode("operand2")}}
@@ -23,31 +30,56 @@ static {{target.getTypeDecl()}} _BINARY_OPERATION_{{op_code}}_{{target.getHelper
     {# CPython2 treats integer values with fast path. #}
 #if PYTHON_VERSION < 0x300
     if ({{left.getIntCheckExpression("operand1")}} && {{right.getIntCheckExpression("operand2")}}) {
-        {% import 'HelperSlotsInt.c.j2' as int_slots %}
-
         {{target.getTypeDecl()}} result;
 
-        {{ int_slots.int_slot(operator, nb_slot, target, int_desc, int_desc, "result", "operand1", "operand2", "exit_result", "exit_result_ok", "exit_result_exception") }}
-
-        exit_result:
-
-        if (unlikely(result == {{target.getExceptionResultIndicatorValue()}})) {
-            return {{target.getExceptionResultIndicatorValue()}};
-        }
+        {% set props = {"exits": []} %}
+        {{ int_slot(props, operator, nb_slot, target, int_desc, int_desc, "result", "operand1", "operand2", "exit_result_ok", "exit_result_exception") }}
 
         exit_result_ok:
-
         return result;
 
-{# Not all operations have defined a definite exception exit, so this can be unused #}
+{% if "exit_result_exception" in props["exits"] %}
         exit_result_exception:
         return {{target.getExceptionResultIndicatorValue()}};
+{% endif %}
     }
 #endif
 {% endif %}
 
-{% if left.getTypeSpecializationCode(target, right, nb_slot, sq_slot1, "operand1", "operand2") %}
-    {{left.getTypeSpecializationCode(target, right, nb_slot, sq_slot1, "operand1", "operand2")}}
+{% if left.hasTypeSpecializationCode(right, nb_slot, sq_slot1) %}
+{% if left.isSimilarOrSameTypesAsOneOf(int_desc, long_desc, float_desc, bytes_desc, tuple_desc, list_desc, set_desc) or right.isSimilarOrSameTypesAsOneOf(int_desc, long_desc, float_desc, bytes_desc, tuple_desc, list_desc, set_desc) %}
+    {% set props = {"exits": []} %}
+    {{target.getTypeDecl()}} result;
+
+{% if left.isSimilarOrSameTypesAsOneOf(int_desc) or right.isSimilarOrSameTypesAsOneOf(int_desc) %}
+    {{ int_slot(props, operator, nb_slot, target, left, right, "result", "operand1", "operand2", "exit_result_ok", "exit_result_exception") }}
+{% elif left.isSimilarOrSameTypesAsOneOf(long_desc) or right.isSimilarOrSameTypesAsOneOf(long_desc) %}
+    {{ long_slot(props, operator, nb_slot, target, left, right, "result", "operand1", "operand2", "exit_result_ok", "exit_result_exception") }}
+{% elif left.isSimilarOrSameTypesAsOneOf(float_desc) or right.isSimilarOrSameTypesAsOneOf(float_desc) %}
+    {{ float_slot(props, operator, nb_slot, target, left, right, "result", "operand1", "operand2", "exit_result_ok", "exit_result_exception") }}
+{% elif left.isSimilarOrSameTypesAsOneOf(bytes_desc) or right.isSimilarOrSameTypesAsOneOf(bytes_desc) %}
+    {{ bytes_slot(props, operator, nb_slot, target, left, right, "result", "operand1", "operand2", "exit_result_ok", "exit_result_exception") }}
+{% elif left.isSimilarOrSameTypesAsOneOf(tuple_desc) or right.isSimilarOrSameTypesAsOneOf(tuple_desc) %}
+    {{ tuple_slot(props, operator, nb_slot, target, left, right, "result", "operand1", "operand2", "exit_result_ok", "exit_result_exception") }}
+{% elif left.isSimilarOrSameTypesAsOneOf(list_desc) or right.isSimilarOrSameTypesAsOneOf(list_desc) %}
+    {{ list_slot(props, operator, nb_slot, target, left, right, "result", "operand1", "operand2", "exit_result_ok", "exit_result_exception") }}
+{% elif left.isSimilarOrSameTypesAsOneOf(set_desc) or right.isSimilarOrSameTypesAsOneOf(set_desc) %}
+    {{ set_slot(props, operator, nb_slot, target, left, right, "result", "operand1", "operand2", "exit_result_ok", "exit_result_exception") }}
+{% else %}
+#error Operator {{operator}} slots not implemented
+{% endif %}
+
+    exit_result_ok:
+    return result;
+
+{% if "exit_result_exception" in props["exits"] %}
+    exit_result_exception:
+    return {{target.getExceptionResultIndicatorValue()}};
+{% endif %}
+
+{% else %}
+    {{ left.getTypeSpecializationCode(target, right, nb_slot, sq_slot1, "operand1", "operand2") }}
+{% endif %}
 {% else %}
     PyTypeObject *type1 = {{left.getTypeValueExpression("operand1")}};
     {{left.getSlotType(nb_slot)}} slot1 = {{left.getSlotValueExpression("type1", nb_slot)}};
@@ -67,15 +99,10 @@ static {{target.getTypeDecl()}} _BINARY_OPERATION_{{op_code}}_{{target.getHelper
     } else {
         assert(type1 == type2);
 
-        {# There may be a special code for same types. #}
-        {{left.getSameTypeOperationSpecializationCode(
-            target=target,
-            other=right,
-            nb_slot=nb_slot,
-            sq_slot=sq_slot1,
-            operand1="operand1",
-            operand2="operand2")
-        }}
+        {# There maybe be special code for same types. #}
+{% if left.getSameTypeType(right).hasSameTypeOperationSpecializationCode(right.getSameTypeType(left), nb_slot, sq_slot1) %}
+        return _BINARY_OPERATION_{{op_code}}_{{target.getHelperCodeName()}}_{{left.getSameTypeType(right).getHelperCodeName()}}_{{right.getSameTypeType(left).getHelperCodeName()}}(operand1, operand2);
+{% endif %}
     }
 
     if (slot1 != NULL) {
@@ -221,7 +248,7 @@ static {{target.getTypeDecl()}} _BINARY_OPERATION_{{op_code}}_{{target.getHelper
 {% endif %}
 
 
-{{ target.getReturnUnsupportedTypeErrorCode(operator, left, right, "type1", "type2") }}
+    {{ target.getReturnUnsupportedTypeErrorCode(operator, left, right, "type1", "type2") }}
 {% endif %}
 }
 
