--- a/nuitka/tools/specialize/templates/HelperSlotsLong.c.j2
+++ b/nuitka/tools/specialize/templates/HelperSlotsLong.c.j2
@@ -15,23 +15,32 @@
 {#     See the License for the specific language governing permissions and      #}
 {#     limitations under the License.                                           #}
 {#                                                                              #}
-{% import 'HelperSlotsInt.c.j2' as int_slots %}
-static inline {{target.getTypeDecl()}} SLOT_{{nb_slot}}_{{target.getHelperCodeName()}}_{{left.getHelperCodeName()}}_{{right.getHelperCodeName()}}({{left.getVariableDecl("operand1")}}, {{right.getVariableDecl("operand2")}}) {
-    {{target.getTypeDecl()}} result;
+{% from 'HelperSlotsCommon.c.j2' import goto_exit %}
 
-    {{ int_slots.int_slot(operator, nb_slot, target, left, right, "result", "operand1", "operand2", "exit_result", "exit_result_ok", "exit_result_exception") }}
+{% macro long_slot(props, operator, nb_slot, target, left, right, result, operand1, operand2, exit_result_ok, exit_result_exception) %}
+    // Not every code path will make use of all possible results.
+    NUITKA_MAY_BE_UNUSED PyObject *obj_result;
 
-    exit_result:
+    {# TODO: Could and should in-line and specialize this per slot too. #}
+    PyObject *x = {{left.getSlotCallExpression(nb_slot, "PyLong_Type.tp_as_number->" + nb_slot, "operand1", "operand2")}};
+    assert(x != Py_NotImplemented);
 
-    if (unlikely(result == {{target.getExceptionResultIndicatorValue()}})) {
-        return {{target.getExceptionResultIndicatorValue()}};
+    {{ goto_exit(props, "exit_result_object", "x") }}
+
+exit_result_object:
+    if (unlikely(obj_result == NULL)) {
+        {{ goto_exit(props, exit_result_exception) }}
     }
+{% if target %}
+    {{ target.getAssignFromObjectExpressionCode(result, "obj_result") }}
+{% else %}
+    {# TODO: Check the reference we were handed down and do it in-place really. #}
+    // We got an object handed, that we have to release.
+    Py_DECREF({{ operand1 }});
 
-    exit_result_ok:
+    {{ operand1 }} = obj_result;
+    Py_INCREF(obj_result);
+{% endif %}
+    {{ goto_exit(props, exit_result_ok) }}
 
-    return result;
-
-{# Not all operations have defined a definite exception exit, so this can be unused #}
-    exit_result_exception:
-    return {{target.getExceptionResultIndicatorValue()}};
-}
+{% endmacro %}
